feat(source): add update customer logic
