# src/routers/customers/index.js
@@ -3,10 +3,14 @@ const log4js = require('log4js');
 const bcrypt = require('bcrypt');
 
 const db = require('../../database/models');
+const {
+  getUpdateCustomerParams,
+  formatCustomer,
+} = require('../../utils/customer');
 
 const customersRouter = express.Router();
 const log = log4js.getLogger('customersRouter');
-log.level = 'debug';
+log.level = 'trace';
 
 customersRouter.post('/', async (req, res) => {
   log.info('Creates customers request body', req.body);
@@ -19,24 +23,20 @@ customersRouter.post('/', async (req, res) => {
     };
 
     const customer = await db.Customer.create(customerToCreate);
-
-    res.status(201).json({
+    const createCustomerResponse = {
       status: 'ok',
-      data: {
-        id: customer.id,
-        name: customer.name,
-        email: customer.email,
-        created: customer.createdAt,
-      },
-    });
+      data: formatCustomer(customer),
+    };
+
+    log.trace('Create customer response', createCustomerResponse);
+
+    res.status(201).json(createCustomerResponse);
   } catch (error) {
     log.error('Create customer error', error);
 
     res.status(error.code || 400).json({
       status: 'error',
-      data: {
-        message: error.message || 'Internal error',
-      },
+      data: { message: error.message || 'Internal error' },
     });
   }
 });
@@ -60,34 +60,62 @@ customersRouter.get('/', async (req, res) => {
       order: [['id', 'DESC']],
     });
 
-    const customers = rawCustomers.map((customer) => {
-      return {
-        id: customer.id,
-        name: customer.name,
-        email: customer.email,
-        created: customer.createdAt,
-        updated: customer.updatedAt,
-      };
-    });
-
-    log.debug('All customers', JSON.stringify(customers));
-
-    res.status(200).json({
+    const customers = rawCustomers.map(formatCustomer);
+    const getAllCustomersResponse = {
       status: 'ok',
       data: customers,
-    });
+    };
+
+    log.trace(
+      'All customers response',
+      JSON.stringify(getAllCustomersResponse),
+    );
+
+    res.status(200).json(getAllCustomersResponse);
   } catch (error) {
     log.error('Get all customers error', error);
 
     res.status(error.code || 400).json({
       status: 'error',
-      data: {
-        message: error.message || 'Internal error',
-      },
+      data: { message: error.message || 'Internal error' },
     });
   }
 });
 
-module.exports = {
-  customersRouter,
-};
+customersRouter.put('/:customerId', async (req, res) => {
+  try {
+    const { customerId } = req.params;
+    const updateParams = getUpdateCustomerParams(req.body);
+
+    const [updateResult, updatedCustomer] = await db.Customer.update(
+      updateParams,
+      {
+        where: { id: customerId },
+        returning: true,
+        raw: true,
+      },
+    );
+
+    if (updateResult !== 1 || updatedCustomer.length !== 1) {
+      throw new Error(`Customer ${customerId} not updated`);
+    }
+    const formattedCustomer = formatCustomer(updatedCustomer[0]);
+    const updatedCustomerResponse = {
+      status: 'ok',
+      data: formattedCustomer,
+    };
+
+    log.trace('Update customer response', updatedCustomerResponse);
+
+    res.status(200).json(updatedCustomerResponse);
+  } catch (error) {
+    log.error('Update customer error', error);
+
+    res.status(error.code || 400).json({
+      status: 'error',
+      data: { message: error.message || 'Internal error' },
+    });
+  }
+});
+
+module.exports = { customersRouter };
